fix: Rental mapper fixed